Fix scrollbars showing issue on Chrome

--- a/extension/style.css
+++ b/extension/style.css
@@ -1,5 +1,5 @@
 html {
-	width: 800px;
+	width: 780px;
 }
 
 .loader > img {
